--- a/HWAngularRedux/src/app/video/components/video-list/video-list.component.html
+++ b/HWAngularRedux/src/app/video/components/video-list/video-list.component.html
@@ -2,10 +2,10 @@
   <thead>
     <th>Emma</th>
   </thead>
-  <!--  {{i + 1}}) {{movie.snippet.title}} -->
+  
   <tbody>
     <tr *ngFor="let movie of (movies$ | async); index as i">
-      <td [routerLink]="['/movie', movie.snippet.resourceId.videoId]"  (click)="openSingleFilm(movie)">
+      <td [routerLink]="['/movie', movie.snippet.resourceId.videoId]">
         {{i + 1}}) {{movie.snippet.title}}
       </td>
     </tr>
