--- a/HWAngularRedux/src/app/video/components/video-list/video-item/video-item.component.html
+++ b/HWAngularRedux/src/app/video/components/video-list/video-item/video-item.component.html
@@ -1,27 +1,24 @@
-<table>
+<table *ngFor="let movie of (movieID$ | async) ">
   <tr>
     <td>
-      <h2> {{film['0'].snippet.title}} </h2>
-  </tr>
-  <tr>
-    <td>
-      <!-- <iframe src="https://www.youtube.com/embed/ + {{film[ '0'].snippet.resourceId.videoId}}"></iframe> -->
-      <iframe src="https://www.youtube.com/embed/Q-G8oSGZVDI"></iframe>
+      <h2>{{movie.snippet.title}}</h2>
     </td>
   </tr>
-  <tr>
-    <td>
-      {{film['0'].snippet.channelTitle}}
-    </td>
-  </tr>
-  <tr>
-    <td [ngClass]="{'hideBlock': isHideBlock}">
-      <p>
-        {{film['0'].snippet.description}}
-      </p>
-    </td>
-  </tr>
+
+  <tbody>
+    <tr>
+      <td>
+        <iframe src="{{urlScreen}}{{movie.snippet.resourceId.videoId}}"></iframe>
+      </td>
+    </tr>
+
+    <tr>
+      <td>Name Channel: {{movie.snippet.channelTitle}}</td>
+    </tr>
+
+    <tr>
+      <td> {{movie.snippet.description | slice:0:220 }}...</td>
+    </tr>
+  </tbody>
 </table>
-
-
 <button (click)='btnBack()'>BACK</button>
