--- a/HWAngularRedux/src/app/video/components/video-list/video-item/video-item.component.css
+++ b/HWAngularRedux/src/app/video/components/video-list/video-item/video-item.component.css
@@ -1,7 +1,16 @@
-table {
-  border-collapse: collapse;
+.example-card {
+  max-width: 70%;
+  min-width: 350px;
+  margin: auto;
 }
-td,
-th {
-  border: 1px solid #bababa;
+iframe {
+  width: 100%;
+  height: 350px;
+}
+.movie-title {
+  font-size: 20px !important;
+  font-weight: bold;
+}
+.channel-title {
+  font-weight: bold;
 }
