--- a/HWAngularRedux/src/app/video/components/video-list/video-list.component.css
+++ b/HWAngularRedux/src/app/video/components/video-list/video-list.component.css
@@ -1,13 +1,12 @@
-table {
-  border-collapse: collapse;
-  margin: auto;
+.mat-header-cell {
+  font-size: 24px;
+  background-color: cornflowerblue;
+  font-weight: bolder;
 }
-th {
-  background-color: #eee;
-}
-th,
-td {
-  border: 1px solid #b1b1b1;
-  padding: 5px;
+.mat-cell {
   cursor: pointer;
+}
+table {
+  margin: auto;
+  min-width: 350px;
 }
