--- a/HWAngularRedux/src/app/video/components/video-list/video-list.component.html
+++ b/HWAngularRedux/src/app/video/components/video-list/video-list.component.html
@@ -1,4 +1,17 @@
-<table>
+<table mat-table [dataSource]="movies$ | async" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="nameVideos">
+    <th mat-header-cell *matHeaderCellDef> Play list videos</th>
+    <td mat-cell *matCellDef="let movie" [routerLink]="['/movie', movie.snippet.resourceId.videoId]"> {{movie.snippet.title}} </td>
+  </ng-container>
+
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns" color="primary"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" color="primary"></tr>
+</table>
+
+<!-- <table>
   <thead>
     <th>Emma</th>
   </thead>
@@ -12,4 +25,4 @@
     </tr>
   </tbody>
 
-</table>
+</table> -->
